getAllProduct is now functioning, but category_id and expense_id return null.